--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "mongoose": "^8.3.4",
     "nodemon": "^3.1.7",
     "react-icons": "^5.3.0"
   },
@@ -10,8 +12,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon api/index.js",
-    "start":"node api/index.js"
+    "dev": "nodemon api/index.js",
+    "start": "node api/index.js"
   },
   "keywords": [],
   "author": "",
