creating the signIn Route

--- a/.env
+++ b/.env
@@ -3,4 +3,4 @@ MONGO = 'mongodb+srv://alisliman:ae135027@mern-housey.hbpvk.mongodb.net/housy?re
 
 # MONGO = "mongodb+srv://alisliman:ae135027@mern-housey.hbpvk.mongodb.net/?retryWrites=true&w=majority&appName=mern-housey"
 
-
+JWT_SECRET = 'aliAe135027'
